Initial port to Minecraft 26.1.1